--- a/Rapport/Rapport - Partie 1.tex
+++ b/Rapport/Rapport - Partie 1.tex
@@ -20,7 +20,7 @@ Cupcake ipsum dolor sit amet. Cotton candy lollipop sweet apple pie sugar plum. 
 \end{abstract}
 
 \section{Modèle entité-association}
-Cake toffee bonbon sugar plum fruitcake cotton candy caramels lollipop marzipan. Carrot cake chocolate bar candy lollipop gummies jujubes muffin jelly. Candy canes lemon drops sweet roll croissant halvah wafer croissant tiramisu toffee. Toffee dragée topping ice cream chocolate cake tootsie roll sesame snaps caramels cake. Dessert pie bear claw muffin macaroon icing dessert cake. 
+Insérer class-diagram ici (modélisant le projet et ses contraintes)
 
 \iffalse
 \begin{figure}[hb]
@@ -32,15 +32,29 @@ Cake toffee bonbon sugar plum fruitcake cotton candy caramels lollipop marzipan.
 \fi 
 
 \subsection*{Contraintes d'intégrité}
-Cake toffee bonbon sugar plum fruitcake cotton candy caramels lollipop marzipan. Carrot cake chocolate bar candy lollipop gummies jujubes muffin jelly. Candy canes lemon drops sweet roll croissant halvah wafer croissant tiramisu toffee. Toffee dragée topping ice cream chocolate cake tootsie roll sesame snaps caramels cake. Dessert pie bear claw muffin macaroon icing dessert cake. 
+Doivent être exprimées en français ou anglais et utiliser les mêmes noms d'entités, d'associations ou d'attributs que dans le modèle conceptuel.
 
 \subsection*{Remarques}
-Cake toffee bonbon sugar plum fruitcake cotton candy caramels lollipop marzipan. Carrot cake chocolate bar candy lollipop gummies jujubes muffin jelly. 
+Exprimer et justi??fier des hypothèses sur le modèle
 
 \section{Modèle Relationnel}
-Cake toffee bonbon sugar plum fruitcake cotton candy caramels lollipop marzipan. Carrot cake chocolate bar candy lollipop gummies jujubes muffin jelly. Candy canes lemon drops sweet roll croissant halvah wafer croissant tiramisu toffee. Toffee dragée topping ice cream chocolate cake tootsie roll sesame snaps caramels cake. Dessert pie bear claw muffin macaroon icing dessert cake. 
+A déduire du modèle entité-association, traduction relationnelle du diagramme et de ses contraintes
+
+\subsection*{Contraintes}
+[...]
 
 \subsection*{Remarques}
-Cake toffee bonbon sugar plum fruitcake cotton candy caramels lollipop marzipan. Carrot cake chocolate bar candy lollipop gummies jujubes muffin jelly. 
+Justifier les choix de modélisation
+
+Les deux modèles doivent servir de support aux requêtes suivantes :
+R1 : La liste et la localisation des trottinettes actuellement disponibles.
+R2 : La liste des utilisateurs ayant utilisé toutes les trottinettes qu'ils ont rechargées.
+R3 : La trottinette ayant eeffectué la plus grande distance.
+R4 : Les trottinettes ayant déjà fait l'objet d'au moins une dizaine de plaintes.
+R5 : Les utilisateurs ayant déjà réalisé au moins 10 trajets avec pour chaque utilisateur concerné : la durée moyenne de ses trajets en trottinette, le nombre total de trajets réalisés, le montant total dépensé en trajets (sans prise en compte de l'argent gagné par les recharges éventuelles de trottinettes).
+
+
+
+
 
 \end{document}
