--- a/Rapport/Rapport - Partie 1.tex
+++ b/Rapport/Rapport - Partie 1.tex
@@ -16,7 +16,7 @@
 \renewcommand{\abstractname}{}
 
 \begin{abstract}
-Cupcake ipsum dolor sit amet. Cotton candy lollipop sweet apple pie sugar plum. Halvah jelly-o jujubes tart tart cake sesame snaps. Muffin halvah tootsie roll jelly-o caramels chupa chups. Powder macaroon chupa chups. Lollipop ice cream chocolate cake chupa chups chocolate bar jelly beans gummi bears chocolate jelly-o.
+TEST BLABLABLA
 \end{abstract}
 
 \section{Modèle entité-association}
@@ -32,6 +32,7 @@ Insérer class-diagram ici (modélisant le projet et ses contraintes)
 \fi 
 
 \subsection*{Contraintes d'intégrité}
+
 Doivent être exprimées en français ou anglais et utiliser les mêmes noms d'entités, d'associations ou d'attributs que dans le modèle conceptuel.
 
 \subsection*{Remarques}
