--- a/Rapport/Rapport - Partie 1.tex
+++ b/Rapport/Rapport - Partie 1.tex
@@ -1,3 +1,4 @@
+ \\
 \documentclass{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -103,5 +104,27 @@ UtilisateurTechnicien(\underline{Identifiant, N\textsuperscript{o}Employé})
 Trottinette.DateMiseEnService <= Intervention.DateDeDépot
 
 Intervention.DateRéparation >= Intervention.DateD2potPlainte
+
+\section{Méthode d'extraction des données}
+
+\section{Requêtes algèbre relationnel}
+
+\section{Requêtes calcul relationnel tuple}
+
+\section{Choix d'implémentation}
+\subsection*{Méthode d'extraction des données}
+
+\subsection*{Choix du serveur}
+
+\section{Hypothèses}
+-Un mecanicien ne peut pas être un utilisateur et vice et vesa.
+-Une plainte ne peut pas etre introduite si il y a deja une plante en cours.
+-Toutes les trottinnettes inserer des données du prof sont disponibles.
+- Quand un utilisateur rends le trottinette elle est rehergée a fond ?
+
+
+
+
+
 \end{document}
 difftime|Ops\.factor|Ops\.numeric_version|Ops\.ordered|Ops\.POSIXt|options|order|ordered|outer|packageEvent|packageHasNamespace|packageStartupMessage|package_version|packBits|pairlist|parent\.env|parent\.frame|parse|parseNamespaceFile|paste|paste0|path\.expand|path\.package|pi|pipe|pmatch|pmax|pmax\.int|pmin|pmin\.int|polyroot|Position|pos\.to\.env|pretty|prettyNum|print|print\.AsIs|print\.by|print\.condition|print\.connection|print\.data\.frame|print\.Date|print\.difftime|print\.DLLInfo|print\.DLLInfoList|print\.DLLRegisteredRoutines|print\.factor|print\.function|print\.hexmode|print\.libraryIQR|print\.listof|print\.NativeRoutineList|print\.noquote|print\.numeric_version|print\.octmode|print\.packageInfo|print\.POSIXct|print\.POSIXlt|print\.proc_time|print\.restart|print\.rle|print\.simple\.list|print\.srcfile|print\.srcref|print\.summaryDefault|print\.summary\.table|print\.table|print\.warnings|prmatrix|proc\.time|prod|prop\.table|psigamma|pushBack|pushBackLength|q|qr|qr\.coef|qr\.fitted|qr\.Q|qr\.qty|qr\.qy|qr\.R|qr\.resid|qr\.solve|qr\.X|quarters|quarters\.Date|quarters\.POSIXt|quit|quote|range|rank|rapply|raw|rawConnection|rawConnectionValue|rawShift|rawToBits|rawToChar|rbind|rbind\.data\.frame|rcond|Re|readBin|readChar|read\.dcf|readline|readLines|readRDS|readRenviron|real|Recall|Reduce|regexec|regexpr|reg\.finalizer|registerS3method|registerS3methods|regmatches|remove|removeCConverter|removeTaskCallback|rep|rep\.Date|rep\.factor|rep\.int|replace|replicate|rep\.numeric_version|rep\.POSIXct|rep\.POSIXlt|require|requireNamespace|restartDescription|restartFormals|retracemem|rev|R\.home|rle|rm|RNGkind|RNGversion|round|round\.Date|round\.POSIXt|row|rowMeans|rownames|row\.names|row\.names\.data\.frame|rowsum|rowsum\.data\.frame|rowSums|R_system_version|R\.version|R\.Vera
